[package]
name = "spaza-safety-escrow"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rust-decimal = { version = "1.33", features = ["serde-with-arbitrary-precision"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.7", features = ["serde", "v4"] }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"
colored = "2.0"
twilio = "0.34"
serde_json = "1.0"
rust-decimal-macros = "1.33"

[dev-dependencies]
rstest = "0.19"