[package]
name = "spaza-safety-escrow"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rust_decimal = "1.40"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.7", features = ["serde", "v4"] }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
log = "0.4"
env_logger = "0.11"
colored = "2.0"
anyhow = "1.0"

[dev-dependencies]
rstest = "0.19"